day 4 pyhtion functions

--- a/python_day_03.ipynb
+++ b/python_day_03.ipynb
@@ -567,8 +567,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3bac298a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reversed number is: 8756\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter an integer: \"))\n",
+    "reversed_num = 0\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    reversed_num = reversed_num * 10 + digit\n",
+    "    num //= 10\n",
+    "print(\"Reversed number is:\", reversed_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9413a6d",
    "metadata": {},
    "outputs": [],
    "source": []
