--- a/python_day_04.ipynb
+++ b/python_day_04.ipynb
@@ -384,11 +384,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "a6d3b3cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SS01 : Alice\n",
+      "SS02 : Bob\n",
+      "SS03 : Charlie\n",
+      "SS04 : David\n",
+      "SS05 : Eve\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_students(**kwargs):\n",
+    "    stu_list = {}\n",
+    "    for key,value in kwargs.items():\n",
+    "        stu_list[key] = value\n",
+    "    return stu_list\n",
+    "       \n",
+    "def display_students(stu_list):\n",
+    "    for key, value in stu_list.items():\n",
+    "        print(key, \":\", value)\n",
+    "\n",
+    "stu_lists = add_students(SS01=\"Alice\", SS02=\"Bob\", SS03=\"Charlie\", SS04=\"David\", SS05=\"Eve\")\n",
+    "display_students(stu_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "6ad6d8b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[36, 25, 9, 4, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# python built-in functions\n",
+    "def find_square(x):\n",
+    "    return x ** 2\n",
+    "\n",
+    "my_list = [6, 5, 3, 2, 9]\n",
+    "square_list = map(find_square,my_list)\n",
+    "print(list(square_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "a1a2ebff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32.0, 68.0, 98.6, 212.0, 14.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert(celsius):\n",
+    "    fahrenheit = celsius * 9/5 + 32\n",
+    "    return fahrenheit\n",
+    "\n",
+    "def convert_to_fahrenheit(celsius):\n",
+    "    fahrenheit_list = list(map(convert,celsius))\n",
+    "    return fahrenheit_list\n",
+    "celsius_list = [0, 20, 37, 100,-10]\n",
+    "print(convert_to_fahrenheit(celsius_list))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "64f893d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter function\n",
+    "list1 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "def is_even(num):\n",
+    "    return num % 2 == 0\n",
+    "even_numbers = list(filter(is_even, list1))\n",
+    "print(even_numbers)"
+   ]
   }
  ],
  "metadata": {
