--- a/python_day_04.ipynb
+++ b/python_day_04.ipynb
@@ -487,6 +487,86 @@
     "even_numbers = list(filter(is_even, list1))\n",
     "print(even_numbers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "b9eb0e5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lambda functions\n",
+    "add = lambda x, y: x + y\n",
+    "result = add(5, 3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d5c69bf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda x, y: x * y)(5, 3))  # Using lambda function directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "4cb2ef81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# given list of integers,use map() with a lambda function to create a new list where each number is double\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "print(list(map(lambda x: x * 2, numbers)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "f93a0ada",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write a pyton program that use the filter() function with a lambda function to remo ve all odd numbers from the list\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "even_numbers = filter(lambda x: x % 2 == 0 ,numbers)\n",
+    "print(list(even_numbers))"
+   ]
   }
  ],
  "metadata": {
