--- a/python_day_04.ipynb
+++ b/python_day_04.ipynb
@@ -567,6 +567,30 @@
     "even_numbers = filter(lambda x: x % 2 == 0 ,numbers)\n",
     "print(list(even_numbers))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "1ae89e4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write a python program with a lambda function to decide the largest between two numbers\n",
+    "Largest = lambda x,y : x if x > y else y\n",
+    "print(Largest(10, 20))\n",
+    "print(Largest(30, 20))\n",
+    "print(Largest(-15, 1))"
+   ]
   }
  ],
  "metadata": {
