--- a/python_day_03.ipynb
+++ b/python_day_03.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d01ed70a",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable is zero\n"
+      "Variable is ten\n"
      ]
     }
    ],
