--- a/python_day_06.ipynb
+++ b/python_day_06.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "7d6e7beb",
    "metadata": {},
    "outputs": [
@@ -176,23 +176,30 @@
     "\n",
     "class BankAccount:\n",
     "    def __init__(self, account_number, owner_name):\n",
-    "        self.account_number = account_number\n",
-    "        self.owner_name = owner_name\n",
+    "        self.__account_number = account_number\n",
+    "        self.__owner_name = owner_name\n",
     "        self.__balance = 0.0\n",
     "\n",
     "    def __validate_amount(self, amount):\n",
-    "        return isinstance(amount, (int, float)) and amount > 0\n",
+    "        return amount > 0\n",
     "    \n",
     "    def display_account(self):\n",
-    "        print(f\"owner: {self.owner_name}, Balance: {self.__balance}\")\n",
+    "        print(f\"owner: {self.__owner_name}, Balance: {self.__balance}\")\n",
     "\n",
     "    def deposit(self, amount):\n",
     "        if self.__validate_amount(amount):\n",
     "            self.__balance += amount\n",
+    "        else:\n",
+    "            print(\"Invalid deposit amount. Please enter a positive number.\")\n",
     "\n",
     "    def withdraw(self, amount):\n",
-    "        if self.__validate_amount(amount) and amount <= self.__balance:\n",
-    "            self.__balance -= amount\n",
+    "        if self.__validate_amount(amount):\n",
+    "            if amount <= self.__balance:\n",
+    "                self.__balance -= amount\n",
+    "            else:\n",
+    "                print(\"Insufficient balance for withdrawal.\")\n",
+    "        else:\n",
+    "            print(\"Invalid withdrawal amount. Please enter a positive number and ensure sufficient balance.\")\n",
     "\n",
     "    def get_balance(self):\n",
     "        return self.__balance\n",
@@ -202,16 +209,242 @@
     "account.display_account()\n",
     "account.deposit(1000)\n",
     "account.withdraw(500)\n",
+    "account.get_balance()\n",
     "account.display_account()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c4e91769",
+   "execution_count": 13,
+   "id": "62f83c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_1 = open(\"my_file.txt\",\"r\")\n",
+    "read_content = file_1.read()\n",
+    "print(read_content)\n",
+    "file_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dd183846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Read line by line\n",
+    "file_2 = open(\"my_file.txt\",\"r\")\n",
+    "line_1 = file_2.readline()\n",
+    "print(line_1)\n",
+    "line_2 = file_2.readline()\n",
+    "print(line_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8ddbdda6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Guys! Hope everthing is good. I'm fine too.\n",
+      "This is much better.\n",
+      "This is even better.\n",
+      "I love AI.\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_03 = open(\"my_file.txt\",\"r\")\n",
+    "while True:\n",
+    "    line = file_03.readline()\n",
+    "    if not line:\n",
+    "        break\n",
+    "    print(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "62de41ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"Hi Guys! Hope everthing is good. I'm fine too.\\n\", 'This is much better.\\n', 'This is even better.\\n', 'I love AI.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_01 = open(\"my_file.txt\",\"r\")\n",
+    "lines = file_01.readlines()\n",
+    "print(lines)\n",
+    "file_01.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "552b34a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Guys! Hope everthing is good. I'm fine too.\n",
+      "This is much better.\n",
+      "This is even better.\n",
+      "I love AI.\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_01 = open(\"my_file.txt\",\"r\")\n",
+    "lines = file_01.readlines()\n",
+    "for line in lines:\n",
+    "    print(line.strip())\n",
+    "file_01.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "895a4152",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Guys! Hope everthing is good. I'm fine too.\n",
+      "This is much better.\n",
+      "This is even better.\n",
+      "I love AI.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"my_file.txt\",\"r\") as file_01:\n",
+    "    content = file_01.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fd2c7a0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"my_file_1.txt\",\"w\") as file:\n",
+    "    file.write(\"This is awesome \\n\")\n",
+    "    file.write(\"Programming is fun \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "871166cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"my_file_1.txt\",\"w\") as file:\n",
+    "    file.write(\"This is super \\n\")\n",
+    "    file.write(\"Programming is funnyyyy \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4a635205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"my_file_2.txt\",\"w\") as file_01:\n",
+    "    lines = [\"This is new \\n\",\"ArithmeticError\\n\",\"Read is fun \\n\"]\n",
+    "    file_01.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e287c570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"my_file_2.txt\",\"a\") as file_01:\n",
+    "    file_01.write(\"This is new \\n\")\n",
+    "    file_01.write(\"This is new \\n\")\n",
+    "    file_01.write(\"Read is fun \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0d97173b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John Doe', 'age': 30, 'isStudent': False, 'hobbies': ['reading', 'gardening', 'swimming']}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"test.json\",\"r\") as file:\n",
+    "    # Load JSON data from the file and turns it into a Python dictionary\n",
+    "    data = json.load(file)\n",
+    "print(data)\n",
+    "print(type(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b4f3cc45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "data = {\n",
+    "    \"name\": \"John\",\n",
+    "    \"age\": 30,\n",
+    "    \"city\": \"New York\"\n",
+    "}\n",
+    "with open(\"myjson.json\",\"w\") as file:\n",
+    "    # Convert Python dictionary to JSON and write it to the file\n",
+    "    json.dump(data, file, indent=4)"
+   ]
   }
  ],
  "metadata": {
